// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders correct 1`] = `
<div
  className="BaseLayout-root-1"
>
  <div>
    <title>
      This is the default title
    </title>
  </div>
</div>
`;

exports[`Layout renders correct with title 1`] = `
<div
  className="BaseLayout-root-1"
>
  <div>
    <title>
      Homepage
    </title>
  </div>
  Content
</div>
`;
